bin/tests/snapshots/single_use_let__lint_5dfb577b3bf056fef187b02f1bd7535e6f041fd4a16de1d7e65ab5bb0b7ff5ef.snap
---
source: bin/tests/single_use_let.rs
expression: "\"let\\n  x = pkgs.hello;\\nin\\n  x.name + x.version\\n\""
---

