bin/tests/snapshots/single_use_let__lint_a73466e782cef2cb9b24807142e9e7883dddfc3f0dfb18395c443ca004a74cd6.snap
---
source: bin/tests/single_use_let.rs
expression: "\"let\\n  x = 1;\\nin\\n  { inherit x y; }\\n\""
---
[W30] Warning: Let binding used only once; consider inlining
   ╭─[<temp_file_path>:2:3]
   │
 2 │   x = 1;
   ·   ───┬──  
   ·      ╰──── x is only used once; consider inlining
───╯
