bin/tests/snapshots/single_use_let__lint_fd0805aa6a2a3f40ceff34d8183ca57afed188cf438eaf69940e32919b80716b.snap
---
source: bin/tests/single_use_let.rs
expression: "\"let\\n  a = 1;\\n  b = 2;\\nin\\n  a + b\\n\""
---
[W30] Warning: Let binding used only once; consider inlining
   ╭─[<temp_file_path>:2:3]
   │
 2 │   a = 1;
   ·   ───┬──  
   ·      ╰──── a is only used once; consider inlining
 3 │   b = 2;
   ·   ───┬──  
   ·      ╰──── b is only used once; consider inlining
 5 │   a + b
   ·   ┬  
   ·   ╰── a is only used once; consider inlining
───╯
