bin/tests/snapshots/single_use_let__lint_fe35e07763e86e348e906827fa01efe454c9208bd39ccf21458adb38987630f5.snap
---
source: bin/tests/single_use_let.rs
expression: "\"let\\n  dev = \\\"/dev/sda\\\";\\nin\\n  ''mount ${dev} /mnt''\\n\""
---
[W30] Warning: Let binding used only once; consider inlining
   ╭─[<temp_file_path>:2:3]
   │
 2 │   dev = "/dev/sda";
   ·   ────────┬────────  
   ·           ╰────────── dev is only used once; consider inlining
 4 │   ''mount ${dev} /mnt''
   ·           ───┬──  
   ·              ╰──── dev is only used once; consider inlining
───╯
